# simplicity-lending

./: Cargo.toml
.sqlx/: query-1baaa15bde4d110d88bc760b26b6f5a4576db6853f426af4a549f945ac914ce6.json  query-3f726db28c546ff5ed83c20c6eb167348bf67a7f1540390dde5736c52cb06289.json  query-418da1c5973987311319f833536c66832b890341642108666b3b0b003175df1f.json  query-55466b4753b467252554afaaed68a9b1ca89a46532fa6087f59cc1704f7c8f50.json  (+4 more)
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  error.rs
crates/cli/src/commands/: core.rs  mod.rs
crates/cli/src/commands/factory/: core.rs  error.rs  mod.rs
crates/cli/src/commands/utility/: core.rs  error.rs
crates/contracts/: Cargo.toml
crates/contracts/simf/: issuance_factory.simf  lending.simf  ownable_script_auth.simf
crates/contracts/src/programs/: mod.rs  program.rs
crates/contracts/src/programs/asset_auth/: core.rs
crates/contracts/src/programs/asset_auth_vault/: core.rs  params.rs
crates/contracts/src/programs/issuance_factory/: core.rs  error.rs  metadata.rs  mod.rs  params.rs  witness.rs
crates/contracts/src/programs/lending/: core.rs  error.rs  metadata.rs  mod.rs  offer.rs  params.rs  witness.rs
crates/contracts/src/programs/ownable_script_auth/: core.rs
crates/contracts/src/programs/script_auth/: core.rs
crates/contracts/src/utils/: basis_points.rs  mod.rs
crates/contracts/tests/asset_auth/: setup.rs  unlock_failure_flows.rs  unlock_success_flows.rs
crates/contracts/tests/asset_auth_vault/: final_supply_success_flows.rs  partial_withdraw_success_flows.rs  setup.rs  supply_success_flows.rs  withdraw_all_success_flows.rs
crates/contracts/tests/common/: issuance.rs  tx_steps.rs  wallet.rs
crates/contracts/tests/issuance_factory/: creation_metadata_success_flow.rs  issue_assets_failure_flows.rs  issue_assets_success_flows.rs  remove_factory_failure_flows.rs  remove_factory_success_flows.rs  setup.rs
crates/contracts/tests/lending/: creation_metadata_success_flow.rs  full_offer_repayment_success_flows.rs  mod.rs  offer_acceptance_success_flows.rs  offer_cancellation_failure_flows.rs  offer_cancellation_success_flows.rs  offer_liquidation_success_flows.rs  setup.rs
crates/contracts/tests/ownable_script_auth/: ownership_transfer_success_flows.rs  setup.rs  unlock_success_flows.rs
crates/contracts/tests/script_auth/: unlock_success_flows.rs
crates/indexer/: Cargo.toml  README.md
crates/indexer/configuration/: base.yaml
crates/indexer/migrations/: 20260205141654_tables_creation.sql
crates/indexer/src/: configuration.rs  esplora_client.rs  main.rs
crates/indexer/src/api/: db.rs  mod.rs  params.rs  server.rs  utils.rs
crates/indexer/src/api/borrowers/: db.rs  dto.rs  handlers.rs  mod.rs  params.rs
crates/indexer/src/api/db/: asset_sums.rs  mod.rs
crates/indexer/src/api/dto/: asset_amount.rs  mod.rs  offer_utxo.rs  offers.rs
crates/indexer/src/api/factories/: dto.rs  handlers.rs  mod.rs
crates/indexer/src/api/lenders/: db.rs  dto.rs  handlers.rs  params.rs  routes.rs
crates/indexer/src/api/offers/: db.rs  dto.rs  handlers.rs  list_query.rs  mod.rs  routes.rs
crates/indexer/src/api/openapi/: doc.rs  mod.rs  params.rs  schemas.rs
crates/indexer/src/api/participants/: mod.rs  scope.rs
crates/indexer/src/api/query/: list.rs  mod.rs  offers.rs  participants.rs
crates/indexer/src/indexer/: cache.rs  db.rs  processors.rs  worker.rs
crates/indexer/src/indexer/handlers/: mod.rs  offer_acceptance.rs  offers.rs  pending_offer.rs
crates/indexer/src/indexer/trackers/offers/: core.rs
crates/indexer/src/models/: factories.rs  offer.rs  offer_participants.rs  offer_utxo.rs
crates/indexer/tests/: api_integration.rs  indexer_integration.rs
crates/indexer/tests/common/: mod.rs
crates/session/: Cargo.toml  README.md
crates/session/src/: error.rs  lib.rs  session.rs
deployment/: README.md
gitlab/: build.yaml  functions.yaml
(+245 files in other folders)
