[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.dependencies]
ring = "0.17.14"
hex = "0.4.3"
smplx-std = "0.0.5"
sha2 = { version = "0.10.9", features = ["compress"] }
serde = { version = "1.0.228", features = ["derive"]}
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.41" }

cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
