[package]
name = "lending-cli"
version = "0.1.0"
edition = "2024"
description = "Simplicity Lending helper CLI for Liquid testnet"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "lending-cli"
path = "src/bin/main.rs"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
smplx-std = { workspace = true }

anyhow = "1"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }

sled = "0.34.7"

config = { version = "0.15.16", default-features = true }

minreq = { version = "2.14", features = ["https"] }

lending-contracts = { path = "../contracts" }

[dev-dependencies]
cargo-husky = { workspace = true }
