[package]
name = "lending-contracts"
version = "0.1.0"
edition = "2024"
description = "Simplicity Lending contract"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlockstreamResearch/simplicity-lending"
readme = "README.md"
keywords = ["simplicity", "lending", "liquid", "bitcoin", "elements", "contracts"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["asset_auth", "script_auth", "lending", "pre_lock"]
asset_auth = []
script_auth = []
lending = []
pre_lock = []

[lints]
workspace = true

[dependencies]
ring = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

smplx-std = { workspace = true }

[dev-dependencies]
anyhow = "1"
cargo-husky = { workspace = true }
