[package]
name = "lending-indexer"
version = "0.1.0"
edition = "2024"
description = "Simplicity Lending indexer service"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "simplicity-lending-indexer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
thiserror = "2"
serde_json = "1"

axum = "0.8.8"
reqwest = "0.13.1"
tracing = "0.1"
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "request-id"] }
uuid = { version= "1", features = ["v4", "serde"] }
config = { version = "0.15.16", default-features = true }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde = { version= "1", features = ["derive"]}

hex = { workspace = true }
smplx-std = { workspace = true }

lending-contracts = { path = "../contracts" }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
anyhow = "1"
cargo-husky = { workspace = true }
dotenvy = "0.15"
serial_test = "3"
